--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,7 @@
 /* Define your styles based on the Tailwind CSS classes */
 .Footer-container {
     bottom: 0;
-    background-color: #4a5568; /* Tailwind class: bg-slate-400 */
+    background-color: #0c7513; /* Tailwind class: bg-slate-400 */
     color: #fff; /* Tailwind class: text-white */
     padding: 1.5rem; /* Tailwind class: py-6 px-6 */
     display: grid;
@@ -23,7 +23,7 @@
   }
   
   .Footer-link-container {
-    background-color: #4a5568; /* Tailwind class: bg-slate-400 */
+    background-color: #0c7513; /* Tailwind class: bg-slate-400 */
     margin: auto;
     color: #fff; /* Tailwind class: text-white */
     display: flex;
